changes to download_dataset

--- a/download_dataset.ipynb
+++ b/download_dataset.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /Users/harshil/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/tomioredein/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -25,13 +26,12 @@
     "import pickle\n",
     "from gensim.models import Word2Vec\n",
     "import numpy as np\n",
-    "import torch\n",
-    "import nn.torch"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,41 +74,7 @@
     "\n",
     "\n",
     "\n",
-    "triplets_list = []\n",
-    "num_rows = query_and_relevant_doc_df.shape[0]\n",
     "\n",
-    "# Reset file\n",
-    "with open('corpus.txt', 'w') as file:    \n",
-    "    file.write(\"\") \n",
-    "\n",
-    "\n",
-    "for index, row in query_and_relevant_doc_df.iterrows():\n",
-    "    query = row[\"query\"]  # Assuming 'query' is the column name for the query text\n",
-    "    passages = row[\"passages\"]  # Accessing the dictionary in the 'passages' column\n",
-    "    passage_texts = passages[\"passage_text\"]  # Extracting the list of passage texts\n",
-    "\n",
-    "    \n",
-    "    for relevant_document in passage_texts:        \n",
-    "        # Randomly select another index\n",
-    "        random_row_index = random.randint(0, num_rows - 1)\n",
-    "        # Spliting each passage into a sentence \n",
-    "        sentences = sent_tokenize(relevant_document)\n",
-    "        # appending each sentence into corpus.txt\n",
-    "        with open('corpus.txt', 'a') as file:\n",
-    "            for sentence in sentences:\n",
-    "                file.write(sentence + '\\n')  # Write each sentence on a new line\n",
-    "\n",
-    "        while index == random_row_index:\n",
-    "            random_row_index = random.randint(0, num_rows - 1)\n",
-    "\n",
-    "        \n",
-    "        # Retrieve a passage from the randomly selected row\n",
-    "        random_passages = query_and_relevant_doc_df.loc[random_row_index, \"passages\"]\n",
-    "        random_passage_texts = random_passages[\"passage_text\"]\n",
-    "        \n",
-    "        # Optionally, select a random passage text from the selected row\n",
-    "        irrelevant_document = random.choice(random_passage_texts)\n",
-    "        triplets_list.append((query, relevant_document, irrelevant_document))\n",
     "\n",
     "\n",
     "def clearCorpusFile():\n",
@@ -160,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +182,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting pre processing\n",
+      "Training data loaded\n",
+      "Validation data loaded\n",
+      "Test data loaded\n",
+      "Generating triplets and writing to corpus file\n",
+      "Triplets generated - training sentence piece\n",
+      "Sentence piece trainined, now tokenising triplets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sentencepiece_trainer.cc(77) LOG(INFO) Starts training with : \n",
+      "trainer_spec {\n",
+      "  input: corpus.txt\n",
+      "  input_format: \n",
+      "  model_prefix: m\n",
+      "  model_type: UNIGRAM\n",
+      "  vocab_size: 10000\n",
+      "  self_test_sample_size: 0\n",
+      "  character_coverage: 0.9995\n",
+      "  input_sentence_size: 0\n",
+      "  shuffle_input_sentence: 1\n",
+      "  seed_sentencepiece_size: 1000000\n",
+      "  shrinking_factor: 0.75\n",
+      "  max_sentence_length: 4192\n",
+      "  num_threads: 16\n",
+      "  num_sub_iterations: 2\n",
+      "  max_sentencepiece_length: 16\n",
+      "  split_by_unicode_script: 1\n",
+      "  split_by_number: 1\n",
+      "  split_by_whitespace: 1\n",
+      "  split_digits: 0\n",
+      "  pretokenization_delimiter: \n",
+      "  treat_whitespace_as_suffix: 0\n",
+      "  allow_whitespace_only_pieces: 0\n",
+      "  required_chars: \n",
+      "  byte_fallback: 0\n",
+      "  vocabulary_output_piece_score: 1\n",
+      "  train_extremely_large_corpus: 0\n",
+      "  hard_vocab_limit: 1\n",
+      "  use_all_vocab: 0\n",
+      "  unk_id: 0\n",
+      "  bos_id: 1\n",
+      "  eos_id: 2\n",
+      "  pad_id: -1\n",
+      "  unk_piece: <unk>\n",
+      "  bos_piece: <s>\n",
+      "  eos_piece: </s>\n",
+      "  pad_piece: <pad>\n",
+      "  unk_surface:  ⁇ \n",
+      "  enable_differential_privacy: 0\n",
+      "  differential_privacy_noise_level: 0\n",
+      "  differential_privacy_clipping_threshold: 0\n",
+      "}\n",
+      "normalizer_spec {\n",
+      "  name: nmt_nfkc\n",
+      "  add_dummy_prefix: 1\n",
+      "  remove_extra_whitespaces: 1\n",
+      "  escape_whitespaces: 1\n",
+      "  normalization_rule_tsv: \n",
+      "}\n",
+      "denormalizer_spec {}\n",
+      "trainer_interface.cc(351) LOG(INFO) SentenceIterator is not specified. Using MultiFileSentenceIterator.\n",
+      "trainer_interface.cc(183) LOG(INFO) Loading corpus: corpus.txt\n",
+      "trainer_interface.cc(407) LOG(INFO) Loaded all 10801 sentences\n",
+      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: <unk>\n",
+      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: <s>\n",
+      "trainer_interface.cc(423) LOG(INFO) Adding meta_piece: </s>\n",
+      "trainer_interface.cc(428) LOG(INFO) Normalizing sentences...\n",
+      "trainer_interface.cc(537) LOG(INFO) all chars count=1019574\n",
+      "trainer_interface.cc(548) LOG(INFO) Done: 99.9501% characters are covered.\n",
+      "trainer_interface.cc(558) LOG(INFO) Alphabet size=92\n",
+      "trainer_interface.cc(559) LOG(INFO) Final character coverage=0.999501\n",
+      "trainer_interface.cc(591) LOG(INFO) Done! preprocessed 10801 sentences.\n",
+      "unigram_model_trainer.cc(222) LOG(INFO) Making suffix array...\n",
+      "unigram_model_trainer.cc(226) LOG(INFO) Extracting frequent sub strings... node_num=582010\n",
+      "unigram_model_trainer.cc(274) LOG(INFO) Initialized 44252 seed sentencepieces\n",
+      "trainer_interface.cc(597) LOG(INFO) Tokenizing input sentences with whitespace: 10801\n",
+      "trainer_interface.cc(608) LOG(INFO) Done! 26160\n",
+      "unigram_model_trainer.cc(564) LOG(INFO) Using 26160 sentences for EM training\n",
+      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=0 size=17064 obj=11.7298 num_tokens=54210 num_tokens/piece=3.17686\n",
+      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=1 size=14679 obj=9.65763 num_tokens=54607 num_tokens/piece=3.72008\n",
+      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=0 size=11005 obj=9.69028 num_tokens=58412 num_tokens/piece=5.30777\n",
+      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=1 size=11002 obj=9.64261 num_tokens=58417 num_tokens/piece=5.30967\n",
+      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=0 size=10969 obj=9.64181 num_tokens=58484 num_tokens/piece=5.33175\n",
+      "unigram_model_trainer.cc(580) LOG(INFO) EM sub_iter=1 size=10967 obj=9.64227 num_tokens=58545 num_tokens/piece=5.33829\n",
+      "trainer_interface.cc(686) LOG(INFO) Saving model: m.model\n",
+      "trainer_interface.cc(698) LOG(INFO) Saving vocabs: m.vocab\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triplets tokenised\n",
+      "Data preprocessing complete\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Starting pre processing\")\n",
     "# Loading Traning Data \n",
@@ -240,21 +311,21 @@
     "clearCorpusFile()\n",
     "print(\"Generating triplets and writing to corpus file\")\n",
     "# Creating triplets for each data set and updating all the values to the same corpus\n",
-    "# training_triplets_list = writeToCorpusAndGenerateTriplets(training_query_and_relevant_doc_df)\n",
-    "# validation_triplets_list = writeToCorpusAndGenerateTriplets(validation_query_and_relevant_doc_df)\n",
-    "# test_triplets_list = writeToCorpusAndGenerateTriplets(test_query_and_relevant_doc_df)\n",
+    "training_triplets_list = writeToCorpusAndGenerateTriplets(training_query_and_relevant_doc_df)\n",
+    "validation_triplets_list = writeToCorpusAndGenerateTriplets(validation_query_and_relevant_doc_df)\n",
+    "test_triplets_list = writeToCorpusAndGenerateTriplets(test_query_and_relevant_doc_df)\n",
     "\n",
-    "# print(\"Triplets generated - training sentence piece\")\n",
-    "# # Training sentencepiece on training, validation and test data\n",
-    "# spm.SentencePieceTrainer.train(input=\"corpus.txt\", model_prefix=\"m\", vocab_size=10_000)\n",
-    "# print(\"Sentence piece trainined, now tokenising triplets\")\n",
+    "print(\"Triplets generated - training sentence piece\")\n",
+    "# Training sentencepiece on training, validation and test data\n",
+    "spm.SentencePieceTrainer.train(input=\"corpus.txt\", model_prefix=\"m\", vocab_size=10_000)\n",
+    "print(\"Sentence piece trainined, now tokenising triplets\")\n",
     "\n",
-    "# # Tokenising triplets using sentencepiece \n",
-    "# training_tokenised_triplets = tokenise_triplets(training_triplets_list)\n",
-    "# validation_tokenised_triplets = tokenise_triplets(validation_triplets_list)\n",
-    "# test_tokenised_triplets = tokenise_triplets(test_triplets_list)\n",
-    "# print(\"Triplets tokenised\")\n",
-    "# print(\"Data preprocessing complete\")"
+    "# Tokenising triplets using sentencepiece \n",
+    "training_tokenised_triplets = tokenise_triplets(training_triplets_list)\n",
+    "validation_tokenised_triplets = tokenise_triplets(validation_triplets_list)\n",
+    "test_tokenised_triplets = tokenise_triplets(test_triplets_list)\n",
+    "print(\"Triplets tokenised\")\n",
+    "print(\"Data preprocessing complete\")"
    ]
   },
   {
@@ -266,16 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/xs/t9bhbj5d70n1rjzz47skyw_m0000gn/T/ipykernel_69053/3319972402.py:37: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_new.cpp:278.)\n",
+      "  return torch.tensor(embeddings)\n"
+     ]
+    }
+   ],
    "source": [
     "# Save\n",
-    "# with open('validation_tokenized_triplet.pkl', 'wb') as file:\n",
-    "#     pickle.dump(validation_tokenised_triplets, file, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "# with open('test_tokenised_triplets.pkl', 'wb') as file:\n",
-    "#     pickle.dump(validation_tokenised_triplets, file, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "embedded_validation_set_values = generateEmbeddedTriplets(validation_tokenised_triplets)\n",
+    "with open('validation_tokenized_triplet.pkl', 'wb') as file:\n",
+    "    pickle.dump(embedded_validation_set_values, file, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "embedded_test_set_values = generateEmbeddedTriplets(test_tokenised_triplets)\n",
+    "with open('test_tokenised_triplets.pkl', 'wb') as file:\n",
+    "    pickle.dump(embedded_test_set_values, file, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "embedded_training_set_values = generateEmbeddedTriplets(training_tokenised_triplets)\n",
     "\n",
@@ -301,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "week3",
+   "display_name": "Python 3.11.8 ('week3')",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +399,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dfcd774ffd60e8947d7e8ab5d0256137ffcd6fb3f9345a909bd7270f3df919ee"
+   }
   }
  },
  "nbformat": 4,
